RESOLVED FIXED184309
Fix the !HAVE(AVFOUNDATION_VIDEO_OUTPUT) build
https://bugs.webkit.org/show_bug.cgi?id=184309
Summary Fix the !HAVE(AVFOUNDATION_VIDEO_OUTPUT) build
Beth Dakin
Reported 2018-04-04 10:38:55 PDT
Fix the !HAVE(AVFOUNDATION_VIDEO_OUTPUT) build
Attachments
Patch (2.07 KB, patch)
2018-04-04 10:42 PDT, Beth Dakin
jer.noble: review+
Radar WebKit Bug Importer
Comment 1 2018-04-04 10:40:03 PDT
Beth Dakin
Comment 2 2018-04-04 10:42:39 PDT
Beth Dakin
Comment 3 2018-04-04 10:44:25 PDT
Note You need to log in before you can comment on or make changes to this bug.