Fix the !HAVE(AVFOUNDATION_VIDEO_OUTPUT) build https://bugs.webkit.org/show_bug.cgi?id=184309 -and corresponding- rdar://problem/39179126

Reviewed by Jer Noble.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::updateVideoFullscreenInlineImage):
(WebCore::MediaPlayerPrivateAVFoundationObjC::setVideoFullscreenLayer):



Canonical link: https://commits.webkit.org/199856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230265 268f45cc-cd09-0410-ab3c-d52691b4dbfc